--- a/string_calculator/spec/todo.txt
+++ b/string_calculator/spec/todo.txt
@@ -12,6 +12,7 @@ Todo List
 "X" => [0,0]
 "." => "Spaceship lost forever."
 "........X." => [8,0]
+".........." => "Spaceship lost forever."
 "...X......\n.........." => [3,1]
 "..........\n..........\n..........\n.......X..\n..........\n.........." =>  [7, 2]
 "Invalid input" => "Spaceship lost forever."
