added 3 more todos regarding invalid input

--- a/string_calculator/spec/todo.txt
+++ b/string_calculator/spec/todo.txt
@@ -17,3 +17,6 @@ Todo List
 "..........\n...X......" => [3,0]
 "..........\n..........\n..........\n.......X..\n..........\n.........." =>  [7, 2]
 "Invalid input" => "Invalid input"
+"....n...." => "Invalid input"
+".....\..." => "Invalid input"
+".....XX.." => "Invalid input"
